# lerobot_study

./: .gitignore  .pre-commit-config.yaml  LOG.md  README.md  config.py  disable_torquemode.py  evaluate.py  list_port.py  pyproject.toml  record.py  replay.py  reset.py  robot.py  teleop.py  test_camera.py  train.py  visualize_data.py  visualize_html.py
study/: camera.ipynb  camera.py  dataset.ipynb  download.sh  evaluate.ipynb  train.ipynb
